/*
 * Copyright (c) 2017. Geoff Vargo
 */

package com.vargo.geoff.nestabletextview;

/**
 * Created by geoff on 12/21/2017.
 */

public enum EqType {
	NORMAL, FRACTION, EXPONENT, ORDINAL, SQRT
}
