@startuml

title __NESTABLETEXTVIEW's Class Diagram__\n

  package com.vargo.geoff.nestabletextview {
    class BuildConfig {
    }
  }
  

  package com.vargo.geoff.nestabletextview {
    enum EqType {
    }
  }
  

  package com.vargo.geoff.nestabletextview {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.vargo.geoff.nestabletextview {
    class NestableEquation {
    }
  }
  

  package com.vargo.geoff.nestabletextview {
    class NestableTextView {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package com.vargo.geoff.nestabletextview {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    package android.support.graphics.drawable.animated {
      class R {
      }
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.mediacompat {
    class R {
    }
  }
  

  package android.support.v4 {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  NestableEquation -up-|> NestableTextView
  NestableTextView -up-|> ConstraintLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
